# Echo-changecamera

./: .gitignore  PROJECT_STATUS.md  README.md
.claude/skills/: K1-v4l2-dma-buf.md  K2-isp-pipeline.md  K3-npu-rknn.md  K4-audio-alsa-opus.md  K5-display-spi-lcd.md  K6-rga-hardware-acceleration.md  K7-mpp-hw-jpeg.md  K8-pipeline-data-sizes.md  rv1106-knowledge-cards.md
AIChat_demo/: .gitignore  README.md  RESUME_PROJECT.md  debug_gdb_guide.md  embedded_interview_architecture_guide.md  interview_knowledge_points_handbook.md  interview_project_summary.md  interview_qa_deep_dive.md  interview_quantization_guide.md  project_plan.md
AIChat_demo/Client/: CMakeLists.txt  README.md  main.cc  rga_convert.c
AIChat_demo/Client/Application/: Application.cc  Application.h  StateConfig.cc  StateConfig.h  VisionFrameBuffer.cc  VisionFrameBuffer.h  WS_Handler.cc  WS_Handler.h
AIChat_demo/Client/Application/UserStates/: Idle.cc  Listening.cc  Speaking.cc  Startup.cc  Thinking.cc
AIChat_demo/Client/Audio/: AudioProcess.cc  AudioProcess.h
AIChat_demo/Client/Events/: AppEvents.h  EventQueue.h
AIChat_demo/Client/Intent/: IntentHandler.cc  IntentHandler.h
AIChat_demo/Client/StateMachine/: StateMachine.cc  StateMachine.h
AIChat_demo/Client/UartBridge/: CMakeLists.txt  dispatch_example.c  uart_bridge.c  uart_bridge.h
AIChat_demo/Client/WebSocket/: WebsocketClient.cc  WebsocketClient.h
AIChat_demo/Client/c_interface/: AIchat_c_interface.cc  AIchat_c_interface.h
AIChat_demo/Server/: README.md  main.py  requirements.txt  service_manager.py  ws_server.py
AIChat_demo/Server/config/: settings.py
AIChat_demo/Server/handle/: audio_handler.py  auth_handler.py  text_handler.py
AIChat_demo/Server/models/: asr_model.py  llm_model.py  tts_model.py  vad_model.py
AIChat_demo/Server/services/: asr_service.py  chat_service.py  vad_service.py  vision_service.py
AIChat_demo/Server/threads/: audio_send_thread.py  task_manager.py  tts_thread.py
DeskBot_demo/: CMakeLists.txt  README.md  lv_conf.h  main.c  toolchain.cmake
DeskBot_demo/common/event_manager/: event_manager.c  event_manager.h  global_events.h
DeskBot_demo/common/gpio_manager/: gpio_manager.c  gpio_manager.h
DeskBot_demo/common/sys_manager/: sys_manager.c  sys_manager.h
DeskBot_demo/conf/: dev_conf.h
DeskBot_demo/gui_app/: CMakeLists.txt  ui.c  ui.h
DeskBot_demo/gui_app/common/: lv_lib.h  lv_lib_conf.h
DeskBot_demo/gui_app/common/animation/: lv_lib_animation.h
DeskBot_demo/gui_app/common/others/: lv_lib_template.h
DeskBot_demo/gui_app/common/page_manager/: lv_lib_pm.c  lv_lib_pm.h
DeskBot_demo/gui_app/common/stack/: lv_lib_stack.c  lv_lib_stack.h
DeskBot_demo/gui_app/fonts/: ui_font_NuberBig90.c  ui_font_heiti14.c  ui_font_heiti22.c  ui_font_heiti24.c  ui_font_iconfont20.c  ui_font_iconfont26.c  ui_font_iconfont30.c  ui_font_iconfont36.c  ui_font_iconfont44.c  ui_font_iconfont48.c  ui_font_shuhei22.c
DeskBot_demo/gui_app/images/: ui_img_calendar64_png.c  ui_img_clouds_png.c  ui_img_gamememory64_png.c  ui_img_hand60_png.c  ui_img_memo64_png.c  ui_img_muyu128_png.c  ui_img_paint60_png.c  ui_img_question60_png.c  ui_img_sun_png.c  ui_img_think60_png.c  ui_img_weather64_png.c
DeskBot_demo/gui_app/pages/ui_CalculatorPage/: app_CalculatorPage.c  app_CalculatorPage.h  ui_CalculatorPage.c  ui_CalculatorPage.h
DeskBot_demo/gui_app/pages/ui_CalendarPage/: ui_CalendarPage.c  ui_CalendarPage.h
DeskBot_demo/gui_app/pages/ui_ChatBotPage/: app_ChatBotPage.c  app_ChatBotPage.h  ui_ChatBotPage.c  ui_ChatBotPage.h
DeskBot_demo/gui_app/pages/ui_DrawPage/: ui_DrawPage.c  ui_DrawPage.h
DeskBot_demo/gui_app/pages/ui_Game2048Page/: ui_Game2048Page.c  ui_Game2048Page.h
DeskBot_demo/gui_app/pages/ui_GameMemoryPage/: ui_GameMemoryPage.c  ui_GameMemoryPage.h
DeskBot_demo/gui_app/pages/ui_GameMuyuPage/: ui_GameMuyuPage.c  ui_GameMuyuPage.h
DeskBot_demo/gui_app/pages/ui_HomePage/: ui_HomePage.c  ui_HomePage.h
DeskBot_demo/gui_app/pages/ui_SettingPage/: ui_SettingPage.c  ui_SettingPage.h
DeskBot_demo/gui_app/pages/ui_WeatherPage/: app_WeatherPage.c  app_WeatherPage.h  ui_WeatherPage.c  ui_WeatherPage.h
DeskBot_demo/gui_app/pages/ui_YOLOPage/: ui_YOLOPage.c  ui_YOLOPage.h
DeskBot_demo/gui_app/pages/ui_template/: ui_templatePage.c  ui_templatePage.h
DeskBot_demo/utils/: system_para.conf
yolov5_demo/: .gitignore  README.md
yolov5_demo/cpp/: .gitignore  AIcamera_c_interface.cc  AIcamera_c_interface.h  CMakeLists.txt  face_detect.cc  face_detect.h  hw_jpeg_encoder.cc  hw_jpeg_encoder.h  kws_detector.cc  kws_detector.h  main.cc  main2.cc  main_dual.cc  main_face.cc  main_unified.cc  main_verify.cc  main_zero_copy.cc  mfcc_extract.cc  mfcc_extract.h  npu_memory_reuse.cc  npu_memory_reuse.h  v4l2_capture.cc  v4l2_capture.h  yolov5.h  zero_copy_pipeline.cc  zero_copy_pipeline.h
yolov5_demo/cpp/rknpu2/: yolov5_rv1106_1103.cc
yolov5_demo/cpp/rv1106_yolov5_demo/: c_face_test  rknn_yolov5_demo
yolov5_demo/cpp/utils/: common.h  image_utils.c
